--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SinglePageApp",
+  "name": "bathroom-desings",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,15 +11,13 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@types/react-native-snap-carousel": "^3.8.11",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "19.0.0",
     "react-native": "0.78.2",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.2",
-    "react-native-snap-carousel": "^3.9.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -31,10 +29,10 @@
     "@react-native/babel-preset": "0.78.2",
     "@react-native/eslint-config": "0.78.2",
     "@react-native/metro-config": "0.78.2",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "@react-native/typescript-config": "0.78.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
-    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
